--- a/package.json
+++ b/package.json
@@ -5,20 +5,29 @@
 	"scripts": {
 		"serve": "vue-cli-service serve",
 		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint"
+		"lint": "vue-cli-service lint",
+		"api": "nodemon api/server.js"
 	},
 	"dependencies": {
 		"apollo-cache-inmemory": "^1.6.6",
 		"apollo-client": "^2.6.10",
+		"apollo-link": "^1.2.14",
 		"apollo-link-http": "^1.5.17",
+		"apollo-server-express": "^2.23.0",
 		"autoprefixer": "^9.8.6",
 		"axios": "^0.21.1",
+		"body-parser": "^1.19.0",
 		"core-js": "^3.6.5",
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
 		"graphql": "^15.5.0",
 		"graphql-tag": "^2.11.0",
+		"graphql-tools": "^7.0.4",
+		"nodemon": "^2.0.7",
 		"postcss": "^7.0.35",
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
 		"vue": "^2.6.11",
+		"vue-apollo": "^3.0.7",
 		"vue-router": "^3.5.1"
 	},
 	"devDependencies": {
