--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
 		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
 		"vue": "^2.6.11",
 		"vue-apollo": "^3.0.7",
-		"vue-router": "^3.5.1"
+		"vue-router": "^3.5.1",
+		"vuex": "^3.6.2"
 	},
 	"devDependencies": {
 		"@vue/cli-plugin-babel": "~4.5.0",
