--- a/package.json
+++ b/package.json
@@ -1,62 +1,66 @@
 {
-	"name": "urfu",
-	"version": "0.1.0",
-	"private": true,
-	"scripts": {
-		"serve": "vue-cli-service serve",
-		"build": "vue-cli-service build",
-		"lint": "vue-cli-service lint",
-		"api": "nodemon api/server.js"
-	},
-	"dependencies": {
-		"apollo-cache-inmemory": "^1.6.6",
-		"apollo-client": "^2.6.10",
-		"apollo-link": "^1.2.14",
-		"apollo-link-http": "^1.5.17",
-		"apollo-server-express": "^2.23.0",
-		"autoprefixer": "^9.8.6",
-		"axios": "^0.21.1",
-		"body-parser": "^1.19.0",
-		"core-js": "^3.6.5",
-		"cors": "^2.8.5",
-		"express": "^4.17.1",
-		"graphql": "^15.5.0",
-		"graphql-tag": "^2.11.0",
-		"graphql-tools": "^7.0.4",
-		"nodemon": "^2.0.7",
-		"postcss": "^7.0.35",
-		"tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
-		"vue": "^2.6.11",
-		"vue-apollo": "^3.0.7",
-		"vue-router": "^3.5.1",
-		"vuex": "^3.6.2"
-	},
-	"devDependencies": {
-		"@vue/cli-plugin-babel": "~4.5.0",
-		"@vue/cli-plugin-eslint": "~4.5.0",
-		"@vue/cli-service": "~4.5.0",
-		"babel-eslint": "^10.1.0",
-		"eslint": "^6.7.2",
-		"eslint-plugin-vue": "^6.2.2",
-		"vue-template-compiler": "^2.6.11"
-	},
-	"eslintConfig": {
-		"root": true,
-		"env": {
-			"node": true
-		},
-		"extends": [
-			"plugin:vue/essential",
-			"eslint:recommended"
-		],
-		"parserOptions": {
-			"parser": "babel-eslint"
-		},
-		"rules": {}
-	},
-	"browserslist": [
-		"> 1%",
-		"last 2 versions",
-		"not dead"
-	]
+  "name": "urfu",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "api": "nodemon api/server.js"
+  },
+  "dependencies": {
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "apollo-server-express": "^2.23.0",
+    "autoprefixer": "^9.8.6",
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
+    "chart.js": "^2.9.4",
+    "core-js": "^3.6.5",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "graphql": "^15.5.0",
+    "graphql-tag": "^2.11.0",
+    "graphql-tools": "^7.0.4",
+    "nodemon": "^2.0.7",
+    "postcss": "^7.0.35",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.0",
+    "vue": "^2.6.11",
+    "vue-apollo": "^3.0.7",
+    "vue-chartjs": "^3.5.1",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "graphql-tag": "^2.9.0",
+    "vue-cli-plugin-apollo": "~0.22.2",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
